A fresh start + Improve ramp part

--- a/docs/fug.conf
+++ b/docs/fug.conf
@@ -1,10 +1,11 @@
 #
 E3_TARGET_URL:=https://github.com/icshwi
 # 
-EPICS_MODULE_NAME:=ps_fug
+EPICS_MODULE_NAME:=fug
 #
 # EPICS_MODULE_URL:=https://github.com/jeonghanlee
 #
-E3_MODULE_SRC_PATH:=ps_fug
+E3_MODULE_SRC_PATH:=fug
 #
+
 
